--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 </head>
-<body id="body", class="large_content">
+<body id="body">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -54,32 +54,9 @@
     </ul>
   </div>
 </nav>
-	<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
- <!--     <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
- <!--       <ul class="navbar-nav mr-auto">-->
- <!--         <li class="nav-item">-->
- <!--           <a class="nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>-->
- <!--         </li>-->
- <!--         <li class="nav-item">-->
- <!--         	<a class="nav-link" href="/about">About</a>-->
- <!--         </li>-->
- <!--         </li>-->
- <!--         <li class="nav-item">-->
- <!--           <a class="nav-link" href="/help">Help</a>-->
- <!--         </li>-->
- <!--         <li class="nav-item">-->
- <!--           <a class="nav-link" href="/studygroup">Study Group</a>-->
- <!--         </li>-->
- <!--          <li class="nav-item">-->
- <!--           <a class="nav-link" href="/login">Log in</a>-->
- <!--         </li>-->
- <!--       </ul>-->
- <!--     <a class="navbar-brand" href="/login">Login</a>-->
- <!--     </div>-->
- <!--   </nav>-->
 
 	
-	<div style= "height: 94.8vh">
+	<div style= "height: 100%" class="large_content">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
 			<p id="homep">Welcome to Tutor Matching! Click a button below to sign up to tutor others or to receive tutoring. </p>		
@@ -107,9 +84,9 @@
 			<!--<button id="tutor" class="button-responsive"> Login </button>-->
 	    	</a>
 	    <% end %>
- 	</div>
+ 	<!--</div>-->
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
-	<center>
+	<!--<center>-->
 	 	<!--<div class="small_content">-->
 			<!--Need Help? 		-->
 	 	<!-- 	<p>-->
@@ -117,6 +94,6 @@
 	 	 			
 	 	<!-- 	</p>-->
  	 <!--	</div>-->
- 	</center>
+ 	<!--</center>-->
 </body>
 </html>
