--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
 	<script src="jquery-3.3.1.min.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body id="body">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,6 +27,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
+      
       <% if Person.find_by(id: session[:tutor_id]) %>
         <div class="dropdown">
             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
