--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -62,7 +62,7 @@
 		<div class="container" style="margin-top: -30px">
 			<h1>Need help?</h1>
 			<p id="homep">Click on the 'Home' page to sign up (as a tutor or a tutee) and visit the 'About' page to read about our website.
-			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=alexgiantseed@gmail.com&su=Help - Tutor Matching&body=&bcc=">joe_schmoe@gmail.com</a></p>		
+			              If you need additional help, please email <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=vikramchilkunda2003@gmail.com&su=Help - Tutor Matching&body=&bcc=">vikramchilkunda2003@gmail.com</a></p>		
 		</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
  	<div class="filler"></div>
