--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
       </script>
+      <%= favicon_link_tag asset_path('favicon (2).ico') %>
+
+
   </head>
   <body>
 
