--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -69,7 +69,7 @@
 			<div class="studydate"><%= i.date %></div>
 			<div class="location">
 			  <i class="fa fa-map-marker fa-2x"></i>
-			  <div class="loc-popup">La Crescenta Library</div>
+			  <div class="loc-popup">Somewhere Safe</div>
 			</div>			
 		</div>
     <br>
