--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -925,15 +925,16 @@ ul.tutors li img{
 	margin-top: 40px;
 }
 .groupsize{
+	box-sizing: border-box;
 	float: left;
 	width: 28%;
 	height: 100%;
 	font-family: "Red Hat Text";
 	text-align: center;
-	font-size: 8vw;
+	font-size: 7vw;
 	background-color: #FFDF00;
 	color: black;
-	padding: 10px;
+	padding: 20px;
 }
 .host{
 	float: left;
