StudyGroups - added (authorized through email/password)  page to view and edit your study group

--- a/app/views/study_groups/ownerGroup.html.erb
+++ b/app/views/study_groups/ownerGroup.html.erb
@@ -57,7 +57,44 @@
 </div>
 <br>
 
-
+ <div class = "studygroupdisplaycard ">
+			<div class="groupsize"><%= @ownedGroup.groupSize %></div>
+			<div class="host"><%=  @ownedGroup.creatorName %></div>
+			<div class="contact"><%=  @ownedGroup.email %></div>
+			<div class="studydate"><%=  @ownedGroup.date %></div>
+			<div class="location">
+			  <i class="fa fa-map-marker fa-2x"></i>
+			  <div class="loc-popup"><%=  @ownedGroup.location %></div>
+			</div>			
+		</div>
+		
+		
+	<%= form_for(@ownedGroup, url: editGroup_path) do |f| %>
+	   <%= f.label :creatorName, "Change Name" %> <span class="required">*</span>
+        <%= f.text_field :creatorName, class: 'form-control' %>
+        
+        <%= f.label :date, "Date" %> <span class="required">*</span>
+        <%= f.text_field :date, class: 'form-control' %>
+        
+        <%= f.label :location, "Location" %> <span class="required">*</span>
+        <%= f.text_field :location, placeholder: "Ex: La Crescenta Library, etc. ", class: 'form-control' %>
+        
+        <%= f.label :groupSize, "Size of your group" %> <span class="required">*</span>
+         <%= f.text_field :groupSize, placeholder: "*Set above 100 if this doesn't matter", class: 'form-control' %>   
+       
+        <%= f.label :groupName, "What you want to study" %> <span class="required">*</span>
+        <%= f.text_field :groupName, placeholder: "Ex: AP Environmental Science", class: 'form-control' %>
+        <br>
+        <%= f.label :time, "Time" %> <span class="required">*</span>
+        <%= f.text_field :time, placeholder: "6:30 p.m.", class: 'form-control', id: 'bottominput' %>
+         
+        <%= f.label :email, "Your email address" %> <span class="required">*</span>
+        <%= f.text_field :email, class: 'form-control', id: 'bottominput' %>
+        
+         <%= f.label :passkey, "Password (You'll need this to view details or delete your group)" %> <span class="required">*</span>
+        <%= f.text_field :passkey, class: 'form-control', id: 'bottominput' %>
+  
+	<% end %>
             <!--</div>-->
           <!--%= link_to "Create Subject", 'subjectcreate_path', {:style=>"color:#fff;"} %>-->
 
