--- a/app/views/study_groups/allgroups.html.erb
+++ b/app/views/study_groups/allgroups.html.erb
@@ -72,7 +72,7 @@
 			<div class="studydate"><%= i.date %></div>
 			<div class="location">
 			  <i class="fa fa-map-marker fa-2x"></i>
-			  <div class="loc-popup">Somewhere Safe</div>
+			  <div class="loc-popup"><%= i.location %></div>
 			</div>			
 		</div>
 		
