study group join

--- a/app/views/study_groups/ownerGroup.html.erb
+++ b/app/views/study_groups/ownerGroup.html.erb
@@ -93,7 +93,8 @@
         
          <%= f.label :passkey, "Password (You'll need this to view details or delete your group)" %> <span class="required">*</span>
         <%= f.text_field :passkey, class: 'form-control', id: 'bottominput' %>
-  
+        
+         <%= f.submit "Save changes", class: "btn btn-primary", id: "specialanimatedbutton" %>
 	<% end %>
             <!--</div>-->
           <!--%= link_to "Create Subject", 'subjectcreate_path', {:style=>"color:#fff;"} %>-->
