--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -4,7 +4,7 @@
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 <% provide(:title, 'Become a Tutor') %>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
